@@ -1,4 +1,10 @@
 
+                CHANGES IN party VERSION 0.9-92 (2007-11-30)
+
+    o   It is now an error to ask for more surrogate variables
+        than actually available. Thanks to Henric Nilsson.
+
+
                 CHANGES IN party VERSION 0.9-92 (2007-11-22)
 
     o   predict(<ctree-object>) computed predictions
